core: fix tests after migration to rjs v2